--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,8 +11,13 @@ dependencies = [
     "hydra-core>=1.3.2",
     "matplotlib>=3.10.8",
     "mlflow>=3.8.0",
+    "numpy>=2.4.0",
+    "onnxruntime-gpu>=1.23.2",
     "onnxscript>=0.5.7",
+    "opencv-python>=4.11.0.86",
+    "pillow>=12.0.0",
     "pytorch-lightning>=2.6.0",
+    "requests>=2.32.5",
     "segmentation-models-pytorch>=0.5.0",
     "torch>=2.9.1",
     "torchvision>=0.24.1",
