--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,5 +43,8 @@ quote-style = "double"
 
 [dependency-groups]
 dev = [
+    "onnx>=1.20.0",
     "pre-commit>=4.5.1",
+    "pytest>=9.0.2",
+    "pytest-cov>=7.0.0",
 ]
