--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ dependencies = [
     "matplotlib>=3.10.8",
     "mlflow>=3.8.0",
     "numpy>=2.4.0",
-    "onnxruntime-gpu>=1.23.2",
+    "onnxruntime-gpu>=1.23.2 ; sys_platform != 'darwin'",
+    "onnxruntime>=1.23.2 ; sys_platform == 'darwin'",
     "onnxscript>=0.5.7",
     "opencv-python>=4.11.0.86",
     "pillow>=12.0.0",
